--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,15 @@ a {
 	text-decoration: none;
 }
 
+#ncdownloader-form-wrapper .form-input-wrapper {
+	display  : flex;
+	flex-flow: row nowrap;
+}
+#ncdownloader-form-wrapper .form-input-wrapper select,
+#ncdownloader-form-wrapper .form-input-wrapper input {
+	justify-content: left;
+}
+
 a:hover,
 a:focus {
 	color          : #23527c;
@@ -17,11 +26,6 @@ a:focus {
 	outline       : 5px auto -webkit-focus-ring-color;
 	outline-offset: -2px;
 }
-
-#ncdownloader-form-wrapper input {
-	display: block;
-}
-
 div .number {
 	background   : none repeat scroll 0 0 #5f5853;
 	border-radius: 999px;
@@ -37,7 +41,7 @@ div .number {
 
 #ncdownloader-form-wrapper input[type=text] {
 	padding: 0px 5px;
-	width  : 100%;
+    flex:auto;
 }
 
 #ncdownloader-table-data .table-cell {
@@ -51,9 +55,11 @@ div .number {
 .icon-purge {
 	background-image: url('../img/trash.svg');
 }
+
 .icon-unpause {
 	background-image: url('../img/play.svg');
 }
+
 #ncdownloader-action-links-container {
 	position: relative;
 }
