--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ a {
 	display  : flex;
 	flex-flow: row nowrap;
 }
+
 #ncdownloader-form-wrapper .form-input-wrapper select,
 #ncdownloader-form-wrapper .form-input-wrapper input {
 	justify-content: left;
@@ -26,6 +27,7 @@ a:focus {
 	outline       : 5px auto -webkit-focus-ring-color;
 	outline-offset: -2px;
 }
+
 div .number {
 	background   : none repeat scroll 0 0 #5f5853;
 	border-radius: 999px;
@@ -39,9 +41,13 @@ div .number {
 	padding      : 0 8px;
 }
 
+#ncdownloader-settings-form input[type=text] {
+	width: 160px;
+}
+
 #ncdownloader-form-wrapper input[type=text] {
 	padding: 0px 5px;
-    flex:auto;
+	flex   : auto;
 }
 
 #ncdownloader-table-data .table-cell {
@@ -161,12 +167,27 @@ div .number {
 	color: red;
 }
 
+.checkboxes label {
+	display: inline-block;
+	padding-right: 10px;
+	white-space: nowrap;
+  }
+  .checkboxes input {
+	vertical-align: middle;
+  }
+  .checkboxes label span {
+	vertical-align: middle;
+  }
+
 @media only screen and (min-width: 800px) {}
 
 @media only screen and (max-width: 1024px) {
 	#ncdownloader-form-wrapper {
 		position  : relative;
 		margin-top: 2em;
+	}
+	#ncdownloader-settings-form input[type=text] {
+		width: 135px;
 	}
 }
 
