moved settings button to bottom and made it collapsible;use nc's built-in filepicker to set download and torrents folders;fixed issues of youtube-dl filenames exceeding the maximum length

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,3 +1,7 @@
+#ncdownloader-settings-collapsible-container {
+    padding-left: 4%;
+}
+
 .action-item {
     position: relative;
 }
@@ -114,7 +118,7 @@ div .number {
     padding-top: 0.3em;
 }
 
-.app-ncdownloader  #app-content-wrapper {
+.app-ncdownloader #app-content-wrapper {
     flex-wrap: wrap;
 }
 
