added delete option for youtube-dl download;added options for copying links;

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -41,7 +41,9 @@
     .icon-add {
         background-image: url('../../img/add.svg');
     }
-
+    .icon-clipboard {
+        background-image: url('../../img/clippy.svg');
+    }
     #ncdownloader-form-wrapper {
         margin-left: 2px;
 
