--- a/src/css/table.scss
+++ b/src/css/table.scss
@@ -52,7 +52,7 @@
   .table-cell:first-child {
     flex         : 1 1 auto;
     width        : 50%;
-    overflow     : hidden;
+    overflow     : scroll;
     text-overflow: ellipsis;
     white-space  : nowrap;
   }
