--- a/src/css/table.scss
+++ b/src/css/table.scss
@@ -88,7 +88,7 @@
       flex: 1 1 0;
     }
   }
-  #ncdownloader-table-wrapper.youtube-dl-downloads {
+  #ncdownloader-table-wrapper.ytdl-downloads {
 
     #table-cell-speed,
     .table-heading-speed {
