--- a/src/css/settings.scss
+++ b/src/css/settings.scss
@@ -1,34 +1,36 @@
 .ncdownloader-personal-settings,
 .ncdownloader-admin-settings {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    margin-left: 1em;
 
     #ncdownloader-message-banner {
-        position          : fixed;
-        top               : 50px;
-        text-align        : center;
-        padding           : 15px;
-        margin-bottom     : 20px;
-        border            : 1px solid transparent;
-        border-radius     : 4px;
-        text-shadow       : 0 1px 0 rgba(255, 255, 255, .2);
-        -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .25), 0 1px 2px rgba(0, 0, 0, .05);
-        box-shadow        : inset 0 1px 0 rgba(255, 255, 255, .25), 0 1px 2px rgba(0, 0, 0, .05);
-        width             : 100%;
+        position: fixed;
+        top: 50px;
+        text-align: center;
+        padding: 15px;
+        margin-bottom: 20px;
+        border: 1px solid transparent;
+        border-radius: 4px;
+        text-shadow: 0 1px 0 rgba(255, 255, 255, 0.2);
+        -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.25), 0 1px 2px rgba(0, 0, 0, 0.05);
+        width: 100%;
         background-color: #dff0d8;
     }
 
     #ncdownloader-message-banner.success,
     .message-banner.success {
-        color           : #799479;
+        color: #799479;
         background-color: #dff0d8;
-        border-color    : #d6e9c6;
+        border-color: #d6e9c6;
     }
 
     #ncdownloader-message-banner.error,
     .message-banner.error {
-        color           : #a94442;
+        color: #a94442;
         background-color: #f2dede;
-        border-color    : #ebccd1;
+        border-color: #ebccd1;
     }
-
 }
