import styling components from bootstrap

--- a/src/css/settings.scss
+++ b/src/css/settings.scss
@@ -1,3 +1,7 @@
+@import "bootstrap";
+@import "spinner";
+@import "helpers";
+
 .ncdownloader-personal-settings,
 .ncdownloader-admin-settings {
     position: relative;
