fixed navigation display issues in new versons

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,7 @@
 @import 'bootstrap';
 @import 'spinner';
 @import 'helpers';
+@import 'navigation';
 
 #ncdownloader-settings-collapsible-container {
     padding-left: 4%;
