--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -3,3 +3,6 @@ $column-height: 45px;
 $upload-width:75px;
 $dl-btn-width: 85px;
 $checkbox-width: 90px;
+$navigation-width: 300px;
+$animation-quick: 0.15s;
+$color-black: #000;
